--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,34 @@
 !/Poissoniana attesa.png
 !/Poissoniana ottenuta.png
 !/Poissoniane vs.png
+!/Esponenziale distribuzione delle medie ogni 5.png
+
+!/Esponenziale distribuzione delle medie ogni 10.png
+
+!/Esponenziale distribuzione delle medie ogni 50.png
+
+!/Esponenziale distribuzione delle medie ogni 100.png
+
+!/Gaussiana distribuzione delle medie ogni 5.png
+
+!/Gaussiana distribuzione delle medie ogni 10.png
+
+!/Gaussiana distribuzione delle medie ogni 50.png
+
+!/Gaussiana distribuzione delle medie ogni 100.png
+
+!/uniforme distribuzione delle medie ogni 5.png
+
+!/uniforme distribuzione delle medie ogni 10.png
+
+!/uniforme distribuzione delle medie ogni 50.png
+
+!/uniforme distribuzione delle medie ogni 100.png
+
+!/x Distribuzione esponenziale 01.png
+
+!/x Distribuzione Gaussiana.png
+
+!/x Distribuzione Lorentiana.png
+
+!/x Distribuzione uniforme 01.png
